--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^12.3.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.2.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
