--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "styled-reset": "^5.0.0",
+    "swiper": "^12.0.3",
     "uuid": "^13.0.0",
     "web-vitals": "^2.1.4"
   },
