--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-modal": "^3.16.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.9.1",
