--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.4.1",
     "recoil": "^0.7.7",
     "styled-reset": "^5.0.0",
     "swiper": "^12.0.3",
